syntax = "proto3";

package NDoom.NItemStorage;

enum EStatusCode {
    Unknown = 0;

    Ok = 1;

    InvalidArgument = 2;
    Timeout = 3;
    NotFound = 4;
    Internal = 5;
    Unavailable = 6;
    DataLoss = 7;

    DoNotUseReservedForFutureExpansion = 8;
}
